<resources>
    <string name="app_name">SygicRecruitment</string>

    <string name="title_department">Department</string>

    <string name="text_employee_department">Department</string>
    <string name="text_employee_position">Position</string>
    <string name="text_employee_age">Age</string>
    <string name="text_employee_name">Name</string>
    <string name="text_no_items_loaded">Failed loading employees</string>

    <string name="button_retry">RETRY</string>

    <string name="transition_employee_image" translatable="false">employee_image</string>

    <string name="temp_18_years_old">18 years old</string>
</resources>
