<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="sk.brecka.sygicrecruitment.viewmodel.EmployeeDetailViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.ui.EmployeeDetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/employee_image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:transitionName="@string/transition_employee_image"
                    app:layout_collapseMode="parallax"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sheet_text_scrim_height_top"
                    android:background="@drawable/scrim_top"
                    app:layout_collapseMode="pin"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sheet_text_scrim_height_bottom"
                    android:layout_gravity="bottom"
                    android:layout_alignBottom="@+id/image"
                    android:background="@drawable/scrim_bottom"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/Toolbar"

                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".view.ui.EmployeeDetailActivity"
            tools:showIn="@layout/activity_employee_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--name-->
                <TextView
                    style="@style/EmployeeText.Header"
                    android:text="@string/text_employee_name"/>

                <TextView
                    android:id="@+id/employee_name"
                    style="@style/EmployeeText"
                    android:text="@{viewModel.employee.firstName + ` ` + viewModel.employee.lastName}"/>

                <View
                    style="@style/Divider"/>

                <!--age-->
                <TextView
                    style="@style/EmployeeText.Header"
                    android:text="@string/text_employee_age"/>

                <TextView
                    android:id="@+id/employee_age"
                    style="@style/EmployeeText"
                    android:text="@string/temp_18_years_old"/>

                <View
                    style="@style/Divider"/>

                <!--department-->
                <TextView
                    style="@style/EmployeeText.Header"
                    android:text="@string/text_employee_department"/>

                <TextView
                    android:id="@+id/employee_department"
                    style="@style/EmployeeText"
                    android:text="@{viewModel.department.name}"/>

                <View
                    style="@style/Divider"/>

                <!--position-->
                <TextView
                    style="@style/EmployeeText.Header"
                    android:text="@string/text_employee_position"/>

                <TextView
                    android:id="@+id/employee_position"
                    style="@style/EmployeeText"
                    android:text="@{viewModel.employee.position}"/>

                <View
                    style="@style/Divider"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>